syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./parser";

service ParserManager {
  rpc GetNewBooks(RequestRM) returns (ResponseRM);
}

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
  int32 year = 4;
  repeated string genres = 5;
  google.protobuf.Timestamp createAt = 6;

}

message ErrorMessage {
  string message = 1;
}

message ResponseRM {
  repeated Book books = 1;
  repeated ErrorMessage Errors = 2;
}

message RequestRM {}